# hypnos

./: .gitignore  .travis.yml  CMakeLists.txt  Hyperion.cpp  Hyperion.h  Hypnos.cpp  Hypnos.h  LICENSE  README.md  keywords.txt  library.json  library.properties.txt
examples/hyperion_example/: hyperion_example.ino
examples/hypnos_example/: hypnos_example.ino
libs/: TicksMock.cpp  TicksMock.h  Wire.cpp  Wire.h  mock_arduino.cpp  mock_arduino.h
test/: CMakeLists.txt  hypnos_test.cpp
